--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,11 @@
 header > h1 {
   border-bottom: 1px solid gray;
 }
+
+.analysis-response{
+  background: rgba(0, 0, 0, 0.05);
+}
+
+.copy-icon{
+  width: 20px;
+}
