--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,108 @@
 * {
+  font-family:"Poppins", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
-#app {
-  border: 1px solid red;
-  width: 1px;
+body{
+  background-color: #f9fafb;
 }
 
-header > h1 {
-  border-bottom: 1px solid gray;
+#app {
+  text-align: center;
+}
+
+header{
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  margin-bottom: 5rem;
+  box-shadow: 5px 5px 15px -13px #000;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+#form{
+  outline: 1px solid rgba(0, 0, 0, 0.05);
+  border: 1rem solid #fff;  
+  box-shadow: 5px 5px 15px -8px #000000;
+  width: 50vw;
+  height: 20rem;
+  border-radius: .4rem;
+  background-color: #fff;
+}
+
+#textarea{
+  resize: none;
+  background-color: #000000;
+  border-radius: .4rem;
+  width: 100%;
+  color: #fff;
+  padding: .4rem 0 0 .4rem;
+  height: 80%;
+}
+
+.form-btns{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.input-file-container{
+  position: relative;
+  font-size: .8rem;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  padding: .4rem;
+  font-family: "Exo 2", sans-serif;
+  border-radius: .4rem;
+  display: flex;
+  justify-content: center;
+  gap: .3rem;
+}
+
+.paper-clip{
+  width: .8rem;
+}
+
+.input-file{
+  cursor: pointer;
+  opacity: 0;
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.submit-form{
+  border: none;
+  outline: none;
+  background-color: rgba(25, 118, 210, 1);
+  font-size: .8rem;
+  font-weight: 600;
+  padding: .4rem 1.2rem;
+  border-radius: .4rem;
+  color: #fff;
+  text-shadow: 1px 1px #000;
+  cursor: pointer;
+  transition: ease-in-out .2s;
+}
+
+.submit-form:hover{
+  background-color: rgb(13, 91, 169);
 }
 
 .analysis-response{
+  display: none;
   background: rgba(0, 0, 0, 0.05);
 }
 
 .copy-icon{
   width: 20px;
 }
+
