--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ main {
   outline: 1px solid rgba(0, 0, 0, 0.05);
   border: 1rem solid #fff;  
   box-shadow: 5px 5px 15px -8px #000000;
-  width: 50vw;
+  width: 50rem;
   height: 20rem;
   border-radius: .4rem;
   background-color: #fff;
