--- a/src/style.css
+++ b/src/style.css
@@ -192,6 +192,7 @@ main {
   padding:.4rem;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: .4rem;
   border-radius: .8rem;
 
@@ -232,12 +233,6 @@ main {
   text-align: justify;
 }
 
-.copy-icon{
-  width: 1.5rem;
-  height: 1.5rem;
-  cursor: pointer;
-}
-
 .productive {
   background: var(--productive-bg);
   border: var(--productive-border);
@@ -252,6 +247,14 @@ main {
   background: var(--unproductive-bg);
   border: var(--unproductive-border);
   color: var(--unproductive-color);
+}
+
+.unproductive-color {
+  color: var(--unproductive-color);
+}
+
+.productive-color {
+  color: var(--productive-color);
 }
 
 .udot {
